testdata/e2e/examples/assertion-tree/assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: kube-dns
  namespace: kube-system
spec:
  template:
    (spec)->specBinding:
      # the ~ modifier tells Chainsaw to iterate over the array elements
      ~.(containers):
        ($specBinding.securityContext != null || securityContext != null): true
